Save changes of exceptions
